--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <div id="result-screen" class="hidden">
-            <h2>🎉 시험 종료! 잘 했어.</h2>
+            <h2>모의 테스트가 종료되었습니다.</h2>
             <p id="final-score"></p>
             <button onclick="location.reload()">다시 시작</button>
         </div>
