--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             {english: "valley", korean: "골짜기"},
             {english: "ankle", korean: "발목"},
             {english: "beat", korean: "때리다"},
-            {english: "senior", korean: "선임의"},
+            {english: "senior", korean: "손위의"},
             {english: "junior", korean: "손아래의"},
             {english: "future", korean: "미래"},
             {english: "coast", korean: "해안"},
