--- a/index.html
+++ b/index.html
@@ -167,50 +167,51 @@
     <script>
         // Lecture 13 & 14 단어 목록
         const wordList = [
-            // Lecture 13
-            {english: "valley", korean: "골짜기"},
-            {english: "ankle", korean: "발목"},
-            {english: "beat", korean: "때리다"},
-            {english: "senior", korean: "손위의"},
-            {english: "junior", korean: "손아래의"},
-            {english: "future", korean: "미래"},
-            {english: "coast", korean: "해안"},
-            {english: "downstairs", korean: "아래층에"},
-            {english: "upstairs", korean: "위층에"},
-            {english: "homework", korean: "숙제"},
-            {english: "bitter", korean: "쓴, 괴로운"},
-            {english: "patient", korean: "인내심이 강한"},
-            {english: "international", korean: "국제간의"},
-            {english: "main", korean: "주요한"},
-            {english: "earn", korean: "벌다"},
-            {english: "whole", korean: "전부"},
-            {english: "selfish", korean: "이기적인"},
-            {english: "dialog", korean: "대화"},
-            {english: "almost", korean: "거의"},
-            {english: "silence", korean: "침묵"},
-            {english: "beach", korean: "해변"},
-            // Lecture 14
-            {english: "different", korean: "서로 다른"},
-            {english: "reach", korean: "도착하다"},
-            {english: "owl", korean: "올빼미"},
-            {english: "beer", korean: "맥주"},
-            {english: "pass", korean: "통과하다"},
-            {english: "passenger", korean: "승객"},
-            {english: "path", korean: "보도"},
-            {english: "pillow", korean: "베개"},
-            {english: "natural", korean: "자연의"},
-            {english: "reason", korean: "이유, 동기"},
-            {english: "steal", korean: "훔치다"},
-            {english: "usual", korean: "보통의"},
-            {english: "unusual", korean: "이상한"},
-            {english: "bring", korean: "가져오다"},
-            {english: "society", korean: "사회"},
-            {english: "still", korean: "아직"},
-            {english: "theater", korean: "극장"},
-            {english: "deliver", korean: "배달하다"},
-            {english: "mostly", korean: "대개는"},
-            {english: "original", korean: "최초의"}
-        ];
+            [
+    // 경선식 중학 Lecture 15
+    {english: "both", korean: "둘 다의"},
+    {english: "wonder", korean: "궁금해 하다"},
+    {english: "nickname", korean: "별명"},
+    {english: "pair", korean: "한 쌍"},
+    {english: "cross", korean: "가로지르다"},
+    {english: "across", korean: "가로 질러서"},
+    {english: "crosswalk", korean: "횡단보도"},
+    {english: "carry", korean: "나르다, 운반하다"},
+    {english: "pretty", korean: "예쁜"},
+    {english: "seem", korean: "~처럼 보이다"},
+    {english: "shout", korean: "외치다"},
+    {english: "since", korean: "~이래"},
+    {english: "symbol", korean: "상징"},
+    {english: "grand", korean: "웅장한"},
+    {english: "invent", korean: "발명하다"},
+    {english: "textbook", korean: "교과서"},
+    {english: "cough", korean: "기침"},
+    {english: "ability", korean: "능력, 재능"},
+    {english: "able", korean: "~할 수 있는"},
+    {english: "enable", korean: "~할 수 있게 하다"},
+    {english: "unable", korean: "~할 수 없는"},
+    // 경선식 중학 Lecture 16
+    {english: "courage", korean: "용기"},
+    {english: "encourage", korean: "격려하다"},
+    {english: "discourage", korean: "낙담시키다"},
+    {english: "cage", korean: "우리"},
+    {english: "narrow", korean: "폭이 좁은"},
+    {english: "than", korean: "~에 비하여"},
+    {english: "then", korean: "그때"},
+    {english: "appear", korean: "나타나다"},
+    {english: "disappear", korean: "사라지다"},
+    {english: "thought", korean: "생각하기"},
+    {english: "attend", korean: "~에 출석하다"},
+    {english: "appoint", korean: "지명하다"},
+    {english: "disappoint", korean: "실망시키다"},
+    {english: "bone", korean: "가시, 뼈"},
+    {english: "praise", korean: "칭찬, 칭찬하다"},
+    {english: "send", korean: "보내다, 발송하다"},
+    {english: "absent", korean: "결석한"},
+    {english: "present", korean: "출석하고 있는"},
+    {english: "medicine", korean: "약"},
+    {english: "trick", korean: "속임수, 장난"}
+];
 
         let shuffledWords = [];
         let currentWordIndex = 0;
