index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             {english: "kingdom", korean: "왕국"},
             {english: "shore", korean: "바닷가"},
             {english: "trader", korean: "상인"},
-            {english: "elder", korean: "상위의"},
+            {english: "elder", korean: "손위의"},
             {english: "pea", korean: "완두콩"},
             {english: "nut", korean: "견과"},
             {english: "peanut", korean: "땅콩"},
