index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             {english: "within", korean: "~의 안쪽에"},
             {english: "fall", korean: "떨어지다"},
             {english: "spread", korean: "퍼뜨리다"},
-            {english: "mind", korean: "부드러운"},
+            {english: "mild", korean: "부드러운"},
             {english: "autumn", korean: "가을"},
             {english: "citizen", korean: "시민, 주민"},
             {english: "city hall", korean: "시청"},
