--- a/index.html
+++ b/index.html
@@ -167,49 +167,49 @@
     <script>
         // Lecture 17 & 18 단어 목록 (요청에 따라 업데이트)
         const wordList = [
-            // 경선식 중학 Lecture 17
-            {english: "hop", korean: "뛰다"},
-            {english: "search", korean: "수색하다"},
-            {english: "forgive", korean: "용서하다"},
-            {english: "empty", korean: "텅 빈, 비우다"},
-            {english: "mind", korean: "마음, 꺼리다"},
-            {english: "perhaps", korean: "아마도"},
-            {english: "thirsty", korean: "목마른"},
-            {english: "railroad", korean: "철도"},
-            {english: "aloud", korean: "큰 소리로"},
-            {english: "crowd", korean: "군중"},
-            {english: "trousers", korean: "바지"},
-            {english: "within", korean: "~의 안쪽에"},
-            {english: "fall", korean: "떨어지다"},
-            {english: "spread", korean: "퍼뜨리다"},
-            {english: "mild", korean: "부드러운"},
-            {english: "autumn", korean: "가을"},
-            {english: "citizen", korean: "시민, 주민"},
-            {english: "city hall", korean: "시청"},
-            {english: "clown", korean: "어릿광대"},
-            {english: "several", korean: "몇 사람의"},
+            //경선식 중학 19
+{english: "quarrel", korean: "싸움, 싸우다"},
+{english: "delay", korean: "연장하다, 연기"},
+{english: "shadow", korean: "그림자, 그늘"},
+{english: "board", korean: "판자"},
+{english: "knowledge", korean: "지식, 학식"},
+{english: "iron", korean: "철, 다리미"},
+{english: "grade", korean: "등급, 성적"},
+{english: "goal", korean: "목표"},
+{english: "dental", korean: "이의, 치과의"},
+{english: "habit", korean: "습관"},
+{english: "each", korean: "각각의, 각자"},
+{english: "other", korean: "다른, 다른 것"},
+{english: "each other", korean: "서로"},
+{english: "another", korean: "다른 하나의"},
+{english: "charm", korean: "매력, 매혹하다"},
+{english: "experience", korean: "경험하다"},
+{english: "hut", korean: "오두막집"},
+{english: "shade", korean: "그늘"},
+{english: "own", korean: "자기 자신의, 소유하다"},
+{english: "piece", korean: "조각"},
             
-            // 경선식 중학 Lecture 18
-            {english: "cancel", korean: "취소하다"},
-            {english: "during", korean: "~동안"},
-            {english: "yet", korean: "아직"},
-            {english: "cost", korean: "가격"},
-            {english: "plant", korean: "식물, 공장"},
-            {english: "yard", korean: "마당, 운동장"},
-            {english: "engineer", korean: "기술자"},
-            {english: "probable", korean: "있음직한"},
-            {english: "downtown", korean: "중심가"},
-            {english: "kingdom", korean: "왕국"},
-            {english: "shore", korean: "바닷가"},
-            {english: "trader", korean: "상인"},
-            {english: "elder", korean: "손위의"},
-            {english: "pea", korean: "완두콩"},
-            {english: "nut", korean: "견과"},
-            {english: "peanut", korean: "땅콩"},
-            {english: "throat", korean: "목구멍"},
-            {english: "lie", korean: "거짓말"},
-            {english: "lay", korean: "누이다, 놓다"},
-            {english: "gift", korean: "선물, 재능"}
+            // 경선식 중학 Lecture 20
+            {english: "problem", korean: "문제"},
+{english: "sight", korean: "시력"},
+{english: "sightseeing", korean: "관광"},
+{english: "sum", korean: "합계"},
+{english: "summary", korean: "요약, 요약하다"},
+{english: "prize", korean: "상품, 상금"},
+{english: "exit", korean: "출구, 나가다"},
+{english: "enemy", korean: "적, 원수"},
+{english: "record", korean: "기록"},
+{english: "nail", korean: "손톱, 못"},
+{english: "allow", korean: "허락하다, 허가하다"},
+{english: "attention", korean: "주의, 주목"},
+{english: "diligent", korean: "부지런한"},
+{english: "cycle", korean: "자전거"},
+{english: "cheek", korean: "뺨, 볼"},
+{english: "ruler", korean: "지배자, 자"},
+{english: "wealth", korean: "부, 재산"},
+{english: "rope", korean: "밧줄"},
+{english: "roof", korean: "지붕"},
+{english: "otherwise", korean: "그렇지 않고"}
         ];
 
         let shuffledWords = [];
