--- a/index.html
+++ b/index.html
@@ -167,51 +167,49 @@
     <script>
         // Lecture 17 & 18 단어 목록 (요청에 따라 업데이트)
         const wordList = [
-            //경선식 중학 19
-{english: "quarrel", korean: "싸움, 싸우다"},
-{english: "delay", korean: "연장하다, 연기"},
-{english: "shadow", korean: "그림자, 그늘"},
-{english: "board", korean: "판자"},
-{english: "knowledge", korean: "지식, 학식"},
-{english: "iron", korean: "철, 다리미"},
-{english: "grade", korean: "등급, 성적"},
-{english: "goal", korean: "목표"},
-{english: "dental", korean: "이의, 치과의"},
-{english: "habit", korean: "습관"},
-{english: "each", korean: "각각의, 각자"},
-{english: "other", korean: "다른, 다른 것"},
-{english: "each other", korean: "서로"},
-{english: "another", korean: "다른 하나의"},
-{english: "charm", korean: "매력, 매혹하다"},
-{english: "experience", korean: "경험하다"},
-{english: "hut", korean: "오두막집"},
-{english: "shade", korean: "그늘"},
-{english: "own", korean: "자기 자신의, 소유하다"},
-{english: "piece", korean: "조각"},
-            
-            // 경선식 중학 Lecture 20
-            {english: "problem", korean: "문제"},
-{english: "sight", korean: "시력"},
-{english: "sightseeing", korean: "관광"},
-{english: "sum", korean: "합계"},
-{english: "summary", korean: "요약, 요약하다"},
-{english: "prize", korean: "상품, 상금"},
-{english: "exit", korean: "출구, 나가다"},
-{english: "enemy", korean: "적, 원수"},
-{english: "record", korean: "기록"},
-{english: "nail", korean: "손톱, 못"},
-{english: "allow", korean: "허락하다, 허가하다"},
-{english: "attention", korean: "주의, 주목"},
-{english: "diligent", korean: "부지런한"},
-{english: "cycle", korean: "자전거"},
-{english: "cheek", korean: "뺨, 볼"},
-{english: "ruler", korean: "지배자, 자"},
-{english: "wealth", korean: "부, 재산"},
-{english: "rope", korean: "밧줄"},
-{english: "roof", korean: "지붕"},
-{english: "otherwise", korean: "그렇지 않고"}
-        ];
+          // 경선식 중학 Lecture 21
 
+{english: "harmony", korean: "조화"},
+{english: "stomach", korean: "위"},
+{english: "court", korean: "법정"},
+{english: "thieve", korean: "훔치다"},
+{english: "expend", korean: "쏟다, 돈을 쓰다"},
+{english: "spend", korean: "쏟다, 돈을 쓰다"},
+{english: "quite", korean: "완전히, 아주"},
+{english: "visit", korean: "방문하다"},
+{english: "subway", korean: "지하철"},
+{english: "tight", korean: "단단히 맨"},
+{english: "leave", korean: "떠나다, 남겨두다"},
+{english: "ill", korean: "병든, 아픈"},
+{english: "kite", korean: "연"},
+{english: "beneath", korean: "아래에"},
+{english: "military", korean: "군의"},
+{english: "tail", korean: "꼬리"},
+{english: "tale", korean: "이야기, 소설"},
+{english: "travel", korean: "여행하다"},
+{english: "note", korean: "메모, 메모하다"},
+{english: "blind", korean: "눈이 먼"},
+// 경선식 중학 Lecture 22
+{english: "among", korean: "~의 사이에"},
+{english: "unless", korean: "~하지 않으면"},
+{english: "rectangle", korean: "직사각형"},
+{english: "delicious", korean: "맛있는"},
+{english: "hold", korean: "잡다"},
+{english: "pal", korean: "단짝, 친구"},
+{english: "apologize", korean: "사과하다"},
+{english: "fence", korean: "담장, 울타리"},
+{english: "nearby", korean: "가까운"},
+{english: "link", korean: "연결하다"},
+{english: "bath", korean: "목욕"},
+{english: "bathroom", korean: "욕실"},
+{english: "clap", korean: "철썩 때리다"},
+{english: "between", korean: "~의 사이에"},
+{english: "bit", korean: "작은 조각, 조금"},
+{english: "underground", korean: "지하의"},
+{english: "prepare", korean: "준비하다"},
+{english: "flag", korean: "깃발"},
+{english: "Mars", korean: "화성"},
+            ];
         let shuffledWords = [];
         let currentWordIndex = 0;
         let score = 0;
