Add 'accident' translation to index.html

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 {english: "prepare", korean: "준비하다"},
 {english: "flag", korean: "깃발"},
 {english: "Mars", korean: "화성"},
+{english: "accident", korean: "사고, 사건"},
             ];
         let shuffledWords = [];
         let currentWordIndex = 0;
