Update word list for lectures 21-24

--- a/index.html
+++ b/index.html
@@ -167,49 +167,48 @@
     <script>
         // Lecture 17 & 18 단어 목록 (요청에 따라 업데이트)
         const wordList = [
-          // 경선식 중학 Lecture 21
-
-{english: "harmony", korean: "조화"},
-{english: "stomach", korean: "위"},
-{english: "court", korean: "법정"},
-{english: "thieve", korean: "훔치다"},
-{english: "expend", korean: "쏟다, 돈을 쓰다"},
-{english: "spend", korean: "쏟다, 돈을 쓰다"},
-{english: "quite", korean: "완전히, 아주"},
-{english: "visit", korean: "방문하다"},
-{english: "subway", korean: "지하철"},
-{english: "tight", korean: "단단히 맨"},
-{english: "leave", korean: "떠나다, 남겨두다"},
-{english: "ill", korean: "병든, 아픈"},
-{english: "kite", korean: "연"},
-{english: "beneath", korean: "아래에"},
-{english: "military", korean: "군의"},
-{english: "tail", korean: "꼬리"},
-{english: "tale", korean: "이야기, 소설"},
-{english: "travel", korean: "여행하다"},
-{english: "note", korean: "메모, 메모하다"},
-{english: "blind", korean: "눈이 먼"},
-// 경선식 중학 Lecture 22
-{english: "among", korean: "~의 사이에"},
-{english: "unless", korean: "~하지 않으면"},
-{english: "rectangle", korean: "직사각형"},
-{english: "delicious", korean: "맛있는"},
-{english: "hold", korean: "잡다"},
-{english: "pal", korean: "단짝, 친구"},
-{english: "apologize", korean: "사과하다"},
-{english: "fence", korean: "담장, 울타리"},
-{english: "nearby", korean: "가까운"},
-{english: "link", korean: "연결하다"},
-{english: "bath", korean: "목욕"},
-{english: "bathroom", korean: "욕실"},
-{english: "clap", korean: "철썩 때리다"},
-{english: "between", korean: "~의 사이에"},
-{english: "bit", korean: "작은 조각, 조금"},
-{english: "underground", korean: "지하의"},
-{english: "prepare", korean: "준비하다"},
-{english: "flag", korean: "깃발"},
-{english: "Mars", korean: "화성"},
-{english: "accident", korean: "사고, 사건"},
+// 경선식 중학 Lecture 23
+{english: "garlic", korean: "마늘"},
+{english: "steel", korean: "강철"},
+{english: "post", korean: "우편, 우체국"},
+{english: "magical", korean: "신비한"},
+{english: "bury", korean: "묻다"},
+{english: "professor", korean: "교수"},
+{english: "desire", korean: "열망하다"},
+{english: "southern", korean: "남쪽의"},
+{english: "northern", korean: "북쪽의"},
+{english: "western", korean: "서쪽의"},
+{english: "eastern", korean: "동쪽의"},
+{english: "silly", korean: "어리석은"},
+{english: "past", korean: "지난, 과거의"},
+{english: "tear", korean: "눈물, 찢어지다"},
+{english: "celebrate", korean: "축하하다, 기념하다"},
+{english: "apart", korean: "따로"},
+{english: "angle", korean: "각도"},
+{english: "tend", korean: "~하는 경향이 있다"},
+{english: "force", korean: "힘, 억지로 시키다"},
+{english: "indoor", korean: "실내의"},
+{english: "outdoor", korean: "집밖의"},
+// 경선식 중학 Lecture 24
+{english: "separate", korean: "분리하다"},
+{english: "matter", korean: "중요하다, 문제되다"},
+{english: "college", korean: "단과 대학"},
+{english: "shy", korean: "수줍은"},
+{english: "according", korean: "~에 의하면"},
+{english: "especially", korean: "특별히"},
+{english: "regulation", korean: "규칙"},
+{english: "envious", korean: "시기심이 강한"},
+{english: "pole", korean: "막대기"},
+{english: "misunderstand", korean: "오해하다"},
+{english: "satisfy", korean: "만족시키다"},
+{english: "wild", korean: "야생의"},
+{english: "period", korean: "기간, 시기"},
+{english: "fix", korean: "고정시키다"},
+{english: "neither", korean: "~쪽도 아니다"},
+{english: "nor", korean: "~도 또한 않다},
+{english: "either", korean: "~도 또한"},
+{english: "particular", korean: "특이한, 특별한"},
+{english: "hike", korean: "도보 여행하다"},
             ];
         let shuffledWords = [];
         let currentWordIndex = 0;
