--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 {english: "period", korean: "기간, 시기"},
 {english: "fix", korean: "고정시키다"},
 {english: "neither", korean: "~쪽도 아니다"},
-{english: "nor", korean: "~도 또한 않다},
+{english: "nor", korean: "~도 또한 않다"},
 {english: "either", korean: "~도 또한"},
 {english: "particular", korean: "특이한, 특별한"},
 {english: "hike", korean: "도보 여행하다"},
