--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 {english: "either", korean: "~도 또한"},
 {english: "particular", korean: "특이한, 특별한"},
 {english: "hike", korean: "도보 여행하다"},
+{english: " royal", korean: "왕, 왕족의"},
             ];
         let shuffledWords = [];
         let currentWordIndex = 0;
