--- a/index.html
+++ b/index.html
@@ -168,48 +168,49 @@
         // Lecture 17 & 18 단어 목록 (요청에 따라 업데이트)
         const wordList = [
 // 경선식 중학 Lecture 23
-{english: "garlic", korean: "마늘"},
-{english: "steel", korean: "강철"},
-{english: "post", korean: "우편, 우체국"},
-{english: "magical", korean: "신비한"},
-{english: "bury", korean: "묻다"},
-{english: "professor", korean: "교수"},
-{english: "desire", korean: "열망하다"},
-{english: "southern", korean: "남쪽의"},
-{english: "northern", korean: "북쪽의"},
-{english: "western", korean: "서쪽의"},
-{english: "eastern", korean: "동쪽의"},
-{english: "silly", korean: "어리석은"},
-{english: "past", korean: "지난, 과거의"},
-{english: "tear", korean: "눈물, 찢어지다"},
-{english: "celebrate", korean: "축하하다, 기념하다"},
-{english: "apart", korean: "따로"},
-{english: "angle", korean: "각도"},
-{english: "tend", korean: "~하는 경향이 있다"},
-{english: "force", korean: "힘, 억지로 시키다"},
-{english: "indoor", korean: "실내의"},
-{english: "outdoor", korean: "집밖의"},
-// 경선식 중학 Lecture 24
-{english: "separate", korean: "분리하다"},
-{english: "matter", korean: "중요하다, 문제되다"},
-{english: "college", korean: "단과 대학"},
-{english: "shy", korean: "수줍은"},
-{english: "according", korean: "~에 의하면"},
-{english: "especially", korean: "특별히"},
-{english: "regulation", korean: "규칙"},
-{english: "envious", korean: "시기심이 강한"},
-{english: "pole", korean: "막대기"},
-{english: "misunderstand", korean: "오해하다"},
-{english: "satisfy", korean: "만족시키다"},
-{english: "wild", korean: "야생의"},
-{english: "period", korean: "기간, 시기"},
-{english: "fix", korean: "고정시키다"},
-{english: "neither", korean: "~쪽도 아니다"},
-{english: "nor", korean: "~도 또한 않다"},
-{english: "either", korean: "~도 또한"},
-{english: "particular", korean: "특이한, 특별한"},
-{english: "hike", korean: "도보 여행하다"},
-{english: " royal", korean: "왕, 왕족의"},
+{english: "frightful", korean: "무서운, 소름끼치는"},
+{english: "safe", korean: "안전한"},
+{english: "save", korean: "구하다, 아끼다"},
+{english: "public", korean: "대중, 공공의"},
+{english: "treat", korean: "대접하다"},
+{english: "load", korean: "짐, 태우다"},
+{english: "pardon", korean: "용서하다"},
+{english: "however", korean: "그러나"},
+{english: "journal", korean: "신문, 잡지"},
+{english: "turtle", korean: "거북이"},
+{english: "toward", korean: "~쪽으로"},
+{english: "examination", korean: "시험, 검사"},
+{english: "example", korean: "예, 보기"},
+{english: "survive", korean: "생존하다, 살아남다"},
+{english: "shuttle", korean: "왕복하다, 왕복 운행"},
+{english: "heel", korean: "뒤꿈치"},
+{english: "port", korean: "항구"},
+{english: "import", korean: "수입하다, 수입"},
+{english: "export", korean: "수출하다, 수출"},
+{english: "passport", korean: "여권"},
+{english: "airport", korean: "공항"},
+// 추가 단어 목록 2
+{english: "common", korean: "공통의, 일반의, 흔한"},
+{english: "mobile", korean: "움직이기 쉬운"},
+{english: "automobile", korean: "자동차"},
+{english: "draw", korean: "끌다, 당기다"},
+{english: "job", korean: "일, 직무, 직업"},
+{english: "rest", korean: "휴식"},
+{english: "ahead", korean: "앞으로, 앞에"},
+{english: "hire", korean: "고용하다"},
+{english: "some", korean: "어떤, 약간의"},
+{english: "something", korean: "어떤 것"},
+{english: "some time", korean: "언젠가"},
+{english: "sometimes", korean: "때때로"},
+{english: "somewhere", korean: "어딘가에"},
+{english: "someone", korean: "누군가, 어떤 사람"},
+{english: "any", korean: "어떤, 어느"},
+{english: "anything", korean: "어떤 것"},
+{english: "anytime", korean: "언제든지"},
+{english: "anybody", korean: "누군가"},
+{english: "anyway", korean: "어쨌든"},
+{english: "anymore", korean: "더 이상 ~않다"},
+{english: "anywhere", korean: "어디에도"},
             ];
         let shuffledWords = [];
         let currentWordIndex = 0;
